<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wallpaper_portrait_blue_gradient"
    tools:context=".presentation.ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_action_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/tt_interphases_bold"
            android:text="@string/register_label"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" />

        <TextView
            android:id="@+id/tv_title_create"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/tt_interphases_regular"
            android:text="@string/create_an_new_account_label"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardElevation="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_32">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:text="@string/first_name_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_action_checklist_blue"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:hint="@string/first_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_20"
                    android:textColor="@color/colorOnButton"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toStartOf="@+id/et_lastName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_firstName" />

                <TextView
                    android:id="@+id/tv_lastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:text="@string/last_name_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/et_lastName"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_action_checklist_blue"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:hint="@string/last_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_20"
                    android:textColor="@color/colorOnButton"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/et_firstName"
                    app:layout_constraintTop_toBottomOf="@+id/tv_lastName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_name">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:text="@string/phone_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_action_checklist_blue"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:hint="@string/phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_20"
                    android:textColor="@color/colorOnButton"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_phone">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:text="@string/email_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_action_checklist_blue"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_20"
                    android:textColor="@color/colorOnButton"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_email">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:text="@string/password_label"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableRight="@drawable/ic_action_checklist_blue"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_20"
                    android:textColor="@color/colorOnButton"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/button_rounded_color"
                android:text="@string/register_label"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_password" />


            <TextView
                android:id="@+id/tv_tnc_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:fontFamily="@font/tt_interphases_regular"
                android:gravity="center"
                android:text="@string/tnc_title_label"
                android:textColor="@color/colorLayoutSeparator"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register" />


            <TextView
                android:id="@+id/tv_tnc_link"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tt_interphases_bold"
                android:gravity="center"
                android:text="@string/tnc_link_label"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tnc_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tnc_link">

                <TextView
                    android:id="@+id/tv_login_title"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_interphases_regular"
                    android:gravity="center"
                    android:text="@string/register_login_title_label"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_login"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:fontFamily="@font/tt_interphases_bold"
                    android:gravity="center"
                    android:text="@string/register_login_link_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_login_title"
                    app:layout_constraintStart_toEndOf="@+id/tv_login_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_login_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>